--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,5 +1,5 @@
-name: Feature request
-description: Request a new feature or enhancement for a chart. Please start the issue title with [chartname]
+name: 🚀 Feature request
+description: Request a new feature or enhancement for a chart.
 title: "[chartname] "
 labels: enhancement
 assignees:
