changed: renovate - simplified helm-values fileMatch configuration

--- a/renovate.json
+++ b/renovate.json
@@ -10,18 +10,13 @@
     "prHourlyLimit": 2,
     "prConcurrentLimit": 5,
     "timezone": "Europe/Berlin",
+    "helm-values": {
+        "fileMatch": [
+            "(^|/)values\\.ya?ml$",
+            "samples/values\\.ya?ml$"
+        ]
+    },
     "packageRules": [
-        {
-            "matchManagers": [
-                "helm-values"
-            ],
-            "fileMatch": [
-                "charts/**/values.yaml",
-                "charts/**/values.yml",
-                "charts/**/samples/values.yaml",
-                "charts/**/samples/values.yml"
-            ]
-        },
         {
             "matchManagers": [
                 "helm-values"
