--- a/charts/wordpress/templates/secret.yaml
+++ b/charts/wordpress/templates/secret.yaml
@@ -28,7 +28,7 @@ data:
   {{- else }}
   {{- $host := .Values.externalDatabase.host }}
   {{- $port := default 3306 .Values.externalDatabase.port }}
-  WORDPRESS_DB_NAME: {{ .Values.externalDatabase.dbName | b64enc }}
+  WORDPRESS_DB_NAME: {{ .Values.externalDatabase.database | b64enc }}
   WORDPRESS_DB_HOST: {{ printf "%s:%v" $host $port | b64enc }}
   {{- if .Values.externalDatabase.username }}
   WORDPRESS_DB_USER: {{ .Values.externalDatabase.username | b64enc }}
