--- a/charts/wordpress/Chart.yaml
+++ b/charts/wordpress/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: wordpress
 description: "Using the official WordPress image. This chart provides automation for installation, user management, plugin installation, and metrics."
 type: application
-version: 0.2.9
+version: 0.2.10
 appVersion: "6.8.3"
 icon: https://raw.githubusercontent.com/slydlake/helm-charts/refs/heads/main/charts/wordpress/app.png
 home: https://github.com/slydlake/helm-charts
@@ -26,15 +26,15 @@ annotations:
     - name: slydlake
       email: sly.dlake@gmail.com
   artifacthub.io/changes: |
-    - kind: changed
-      description: "wordpress bumped to 6.8.3-php8.1-apache"
-      url: https://github.com/slydlake/helm-charts/issues/16
-    - kind: changed
-      description: "memcached chart update"
-      url: https://github.com/slydlake/helm-charts/issues/19
-    - kind: changed
-      description: "mariadb chart update"
-      url: https://github.com/slydlake/helm-charts/issues/17
+    - kind: fixed
+      description: "extraEnvVars are now working in wodpress deployment (thanks to ScionOfDesign)"
+      url: https://github.com/slydlake/helm-charts/issues/21
+    - kind: fixed
+      description: "secret value database name (thanks to ScionOfDesign)"
+      url: https://github.com/slydlake/helm-charts/issues/21
+    - kind: fixed
+      description: "uses WORDPRESS_ env variables if defined in values.yaml (thanks to ScionOfDesign)"
+      url: https://github.com/slydlake/helm-charts/issues/21
   artifacthub.io/containsSecurityUpdates: false
   artifacthub.io/images: |
     - name: wordpress
