--- a/charts/wordpress/templates/secret.yaml
+++ b/charts/wordpress/templates/secret.yaml
@@ -30,11 +30,13 @@ data:
   {{- $port := default 3306 .Values.externalDatabase.port }}
   WORDPRESS_DB_NAME: {{ .Values.externalDatabase.database | b64enc }}
   WORDPRESS_DB_HOST: {{ printf "%s:%v" $host $port | b64enc }}
+  {{- if and (not .Values.mariadb.enabled) (not .Values.externalDatabase.existingSecret) }}
   {{- if .Values.externalDatabase.username }}
   WORDPRESS_DB_USER: {{ .Values.externalDatabase.username | b64enc }}
   {{- end }}
-  {{- if and .Values.externalDatabase.password (not .Values.mariadb.enabled) (not .Values.externalDatabase.existingSecret) }}
+  {{- if .Values.externalDatabase.password }}
   WORDPRESS_DB_PASSWORD: {{ .Values.externalDatabase.password | b64enc }}
+  {{- end }}
   {{- end }}
   {{- end }}
 {{- if and .Values.wordpress.init.enabled (empty .Values.wordpress.init.existingSecret) }}
