--- a/renovate.json
+++ b/renovate.json
@@ -23,7 +23,9 @@
                 "/^docker\\.io\\/linuxserver\\/wireguard$/"
             ],
             "versioning": "regex",
-            "regex": "^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)(?:-r(?<prerelease>\\d+)-ls(?<build>\\d+))?$",
+            "regex": {
+                "pattern": "^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)(?:-r(?<prerelease>\\d+)-ls(?<build>\\d+))?$"
+            },
             "description": "Handle linuxserver wireguard tags with -rX-lsY suffix"
         },
         {
