--- a/renovate.json
+++ b/renovate.json
@@ -24,7 +24,14 @@
             ],
             "versioning": "regex",
             "regex": {
-                "pattern": "^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)(?:-r(?<prerelease>\\d+)-ls(?<build>\\d+))?$"
+                "pattern": "^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)(?:-r(?<prerelease>\\d+)-ls(?<build>\\d+))?$",
+                "groups": [
+                    "major",
+                    "minor",
+                    "patch",
+                    "prerelease",
+                    "build"
+                ]
             },
             "description": "Handle linuxserver wireguard tags with -rX-lsY suffix"
         },
