--- a/renovate.json
+++ b/renovate.json
@@ -22,17 +22,7 @@
                 "linuxserver/wireguard",
                 "/^docker\\.io\\/linuxserver\\/wireguard$/"
             ],
-            "versioning": "regex",
-            "regex": {
-                "pattern": "^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)(?:-r(?<prerelease>\\d+)-ls(?<build>\\d+))?$",
-                "groups": [
-                    "major",
-                    "minor",
-                    "patch",
-                    "prerelease",
-                    "build"
-                ]
-            },
+            "versioning": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)(?:-r(?<prerelease>\\d+)-ls(?<build>\\d+))?$",
             "description": "Handle linuxserver wireguard tags with -rX-lsY suffix"
         },
         {
