Applied requested changes.

--- a/charts/wordpress/Chart.yaml
+++ b/charts/wordpress/Chart.yaml
@@ -27,14 +27,14 @@ annotations:
       email: sly.dlake@gmail.com
   artifacthub.io/changes: |
     - kind: fixed
-      description: "extraEnvVars are now working in wodpress deployment (thanks to ScionOfDesign)"
-      url: https://github.com/slydlake/helm-charts/issues/21
+      description: "Updates 'externalDatabase.existingSecret' and 'wordpress.init' to be able to use customizable keys (thanks to ScionOfDesign)"
+      url: https://github.com/slydlake/helm-charts/issues/23
     - kind: fixed
-      description: "secret value database name (thanks to ScionOfDesign)"
-      url: https://github.com/slydlake/helm-charts/issues/21
+      description: "No longer requires that externalDatabase.username be defined if an external secret is specified (thanks to ScionOfDesign)"
+      url: https://github.com/slydlake/helm-charts/issues/23
     - kind: fixed
-      description: "uses WORDPRESS_ env variables if defined in values.yaml (thanks to ScionOfDesign)"
-      url: https://github.com/slydlake/helm-charts/issues/21
+      description: "Ensures that the host and database user are passed into the Wordpress container as environment variables when an external secret is used (thanks to ScionOfDesign)"
+      url: https://github.com/slydlake/helm-charts/issues/23
   artifacthub.io/containsSecurityUpdates: false
   artifacthub.io/images: |
     - name: wordpress
